# WorkSync

./: README.md
backend/mic-chatbot/: CLAUDE.md  README.md  pyproject.toml
backend/mic-chatbot/src/mic_chatbot/: main.py
backend/mic-chatbot/src/mic_chatbot/application/services/: agent_service.py
backend/mic-chatbot/src/mic_chatbot/application/use_cases/: send_message_to_chatbot_use_case.py
backend/mic-chatbot/src/mic_chatbot/infrastructure/config/: dependencies.py  fastapi_config.py  logger.py
backend/mic-chatbot/src/mic_chatbot/infrastructure/controllers/: chat_controller.py  health_controller.py
backend/mic-chatbot/src/mic_chatbot/infrastructure/services/: langchain_agent_service.py
backend/mic_issues/: .env  README.md  docker-compose.yml  pom.xml
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/.claude/: settings.local.json
frontend/public/: robots.txt
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: dialog.tsx  floating-chat.tsx
frontend/src/components/hooks/: use-voice-assistant.ts  use-voice-conversation.ts
frontend/src/components/voice-assistant/: voice-assistant.tsx  voice-orb.tsx
frontend/src/features/issues/: index.ts  issues-page.tsx
frontend/src/services/: config.ts  voice-conversation.ts
frontend/src/services/chatbot/: chatbot-api.ts  chatbot-types.ts
frontend/src/services/deepgram/: audio-cache.ts  deepgram-streaming-stt.ts  deepgram-streaming-tts.ts  (+2 more)
mcp/: .env.example  .gitignore  README.md  pyproject.toml  uv.toml
mcp/src/: __init__.py  client.py  main.py  prompts.py
(+90 files in other folders)
